--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     },
     "require": {
         "firebase/php-jwt": "^6.10",
-        "ramsey/uuid": "^4.7"
+        "ramsey/uuid": "~4.2.3"
     },
     "autoload": {
         "exclude-from-classmap": [
