--- a/.github/workflows/deploy-to-prod.yml
+++ b/.github/workflows/deploy-to-prod.yml
@@ -1,10 +1,11 @@
 on:
-  workflow_dispatch:
+  push:
     branches:
       - master
 name: 🚀 Auto-deploy to Production
 jobs:
   sync_files:
+    environment: production
     name: 📂 Sync files
     runs-on: ubuntu-latest
     steps:
@@ -14,12 +15,13 @@ jobs:
       - name: FTP upload
         uses: SamKirkland/FTP-Deploy-Action@4.3.3
         with:
-          server: ${{ secrets.server }}
-          username: ${{ secrets.ftp_username }}
+          server: ${{ secrets.server1 }}
+          username: ${{ secrets.ftp_username2 }}
           password: ${{ secrets.ftp_password }}
-          server-dir: ${{ secrets.ftp_server_dir_prod }}
+          server-dir: ${{ secrets.server_dir }}
 
   create_supporting_file:
+    environment: production
     needs: sync_files
     name: ⚙️ Create support file
     runs-on: ubuntu-latest
@@ -27,14 +29,13 @@ jobs:
       - name: Create htaccess, index, env file, and install dependencies
         uses: appleboy/ssh-action@v0.1.6
         with:
-          host: ${{ secrets.server }}
+          host: ${{ secrets.server1 }}
           username: ${{ secrets.ssh_username }}
           password: ${{ secrets.ssh_password }}
           port: ${{ secrets.ssh_port }}
-          script:
-            cp -n ${{ secrets.path_domain }}${{ secrets.ftp_server_dir_prod }}public/.htaccess ${{ secrets.path_domain }}${{ secrets.ftp_server_dir_prod }} &&
-            chmod -R 777 ${{ secrets.path_domain }}${{ secrets.ftp_server_dir_prod }} &&
-            cd ${{ secrets.path_domain }}${{ secrets.ftp_server_dir_prod }} &&
+          script: cd ${{ secrets.path_domain2 }}${{ secrets.server_dir }} &&
+            cp -n public/.htaccess . &&
+            chmod -R 777 . &&
             if stat index.php;
             then echo "File exists";
             else touch index.php &&
@@ -44,14 +45,15 @@ jobs:
             fi &&
             touch .env &&
             truncate -s 0 .env &&
-            echo "CI_ENVIRONMENT = production" >> .env &&
-            echo "secret.key = ${{ secrets.env_key_prod }}" >> .env &&
+            echo "CI_ENVIRONMENT = development" >> .env &&
+            echo "secret.key = ${{ secrets.env_key }}" >> .env &&
             echo "database.default.hostname = localhost" >> .env &&
-            echo "database.default.database = ${{ secrets.env_database_prod }}" >> .env &&
-            echo "database.default.username = ${{ secrets.env_username_prod }}" >> .env &&
-            echo "database.default.password = ${{ secrets.env_password_prod }}" >> .env &&
+            echo "database.default.database = ${{ secrets.env_database }}" >> .env &&
+            echo "database.default.username = ${{ secrets.env_username }}" >> .env &&
+            echo "database.default.password = ${{ secrets.env_password }}" >> .env &&
             echo "database.default.DBDriver = MySQLi" >> .env &&
             echo "database.default.DBPrefix = " >> .env &&
             echo "database.default.port = 3306" >> .env &&
+            php spark migrate &&
             php ./composer.phar install &&
             chmod -R 755 .
